Initial working example (your welcome)
Red LED and backlight flash out of phase
Speed controlled by the encoder

Green LED is controlled by the PTT

A barely functional USB CDC device outputs the encoder and LED states

--- a/app/Makefile
+++ b/app/Makefile
@@ -25,7 +25,8 @@ SRCS=	blink.c \
 	../hw/startup_stm32f4xx.s \
 	../hw/lcd_driver.c \
 	fonts/font_8_8.c \
-	stubs.c
+	stubs.c \
+	../hw/controls.c
 
 # This is a terrible thing to do...
 .ifdef GENLIST
