Enable LTO and the LCD.
The LCD code likely does not work, but may as well fiddle with it now.

--- a/app/Makefile
+++ b/app/Makefile
@@ -43,8 +43,8 @@ AR=		arm-none-eabi-ar rcu
 OBJCOPY=	arm-none-eabi-objcopy
 RANLIB=		arm-none-eabi-ranlib
 CPPFLAGS=	-DUSE_USB_OTG_FS -I../FreeRTOS/Source/include/ -I../FreeRTOS/ -I../FreeRTOS/Source/portable/GCC/ARM_CM4F -Ilua/src -I../stdperiph -I../hw
-CFLAGS=		-g -fverbose-asm -O2 -std=gnu99 -mthumb -mcpu=cortex-m4 -mthumb-interwork -mfloat-abi=hard -mfpu=fpv4-sp-d16
-LDFLAGS=	-Wl,--script=stm32f405_flash_app.lds -L.
+CFLAGS=		-g -fverbose-asm -O2 -flto -std=gnu99 -mthumb -mcpu=cortex-m4 -mthumb-interwork -mfloat-abi=hard -mfpu=fpv4-sp-d16
+LDFLAGS=	-Wl,--script=stm32f405_flash_app.lds,-Map=firm-tyt.map -L.
 .export
 LDLIBS=		-llua -lm
 .ifdef LUA
